--- a/Static.KBlog/Static.KBlog.csproj
+++ b/Static.KBlog/Static.KBlog.csproj
@@ -20,6 +20,7 @@
     <Content Include="blog_annika.html" />
     <Content Include="blog_viviana.html" />
     <Content Include="about.html" />
+    <Content Include="content_viviana.html" />
     <Content Include="Media\image-1.jpg" />
     <Content Include="Media\image-2.jpg" />
     <Content Include="Media\image-3.jpg" />
@@ -35,6 +36,8 @@
     <Content Include="resrc\img\facebook-icon.jpg" />
     <Content Include="resrc\img\google-icon-hover.jpg" />
     <Content Include="resrc\img\google-icon.jpg" />
+    <Content Include="resrc\img\loading.gif" />
+    <Content Include="resrc\img\login-bg.png" />
     <Content Include="resrc\img\pinterest-icon-hover.jpg" />
     <Content Include="resrc\img\pinterest-icon.jpg" />
     <Content Include="resrc\img\twitter-icon-hover.jpg" />
@@ -122,6 +125,7 @@
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
+    <TypeScriptCompile Include="resrc\ts\BackendAccess.ts" />
     <TypeScriptCompile Include="resrc\ts\ContentLoader.ts" />
     <TypeScriptCompile Include="resrc\ts\d.ts\jquery.d.ts" />
     <TypeScriptCompile Include="resrc\ts\KBlog.ts" />
