--- a/Static.KBlog/Static.KBlog.csproj
+++ b/Static.KBlog/Static.KBlog.csproj
@@ -54,6 +54,12 @@
     <Content Include="resrc\less\all.min.css">
       <DependentUpon>all.css</DependentUpon>
     </Content>
+    <Content Include="resrc\less\backend.css">
+      <DependentUpon>backend.less</DependentUpon>
+    </Content>
+    <Content Include="resrc\less\backend.min.css">
+      <DependentUpon>backend.css</DependentUpon>
+    </Content>
     <Content Include="resrc\less\blog.css">
       <DependentUpon>blog.less</DependentUpon>
     </Content>
@@ -90,8 +96,63 @@
     <Content Include="resrc\less\socialmedia.min.css">
       <DependentUpon>socialmedia.css</DependentUpon>
     </Content>
+    <Content Include="resrc\libs\annotate.css" />
+    <Content Include="resrc\libs\BackendJS.js">
+      <DependentUpon>BackendJS.js.bundle</DependentUpon>
+    </Content>
     <Content Include="resrc\libs\dropzone.js" />
+    <Content Include="resrc\libs\font-awesome.min.css" />
+    <Content Include="resrc\libs\fontawesome\css\font-awesome-ie7.css" />
+    <Content Include="resrc\libs\fontawesome\css\font-awesome.css" />
+    <Content Include="resrc\libs\fontawesome\font\fontawesome-webfont.svg" />
+    <Content Include="resrc\libs\hallo.css" />
+    <Content Include="resrc\libs\hallo.js" />
+    <Content Include="resrc\libs\images\animated-overlay.gif" />
+    <Content Include="resrc\libs\images\arrow.png" />
+    <Content Include="resrc\libs\images\divider.png" />
+    <Content Include="resrc\libs\images\drop_left.png" />
+    <Content Include="resrc\libs\images\pager_arrows.png" />
+    <Content Include="resrc\libs\images\tabicon_search.png" />
+    <Content Include="resrc\libs\images\tabicon_suggestions.png" />
+    <Content Include="resrc\libs\images\tabicon_upload.png" />
+    <Content Include="resrc\libs\images\trash.png" />
+    <Content Include="resrc\libs\images\ui-bg_diagonals-thick_18_b81900_40x40.png" />
+    <Content Include="resrc\libs\images\ui-bg_diagonals-thick_20_666666_40x40.png" />
+    <Content Include="resrc\libs\images\ui-bg_flat_10_000000_40x100.png" />
+    <Content Include="resrc\libs\images\ui-bg_glass_100_f6f6f6_1x400.png" />
+    <Content Include="resrc\libs\images\ui-bg_glass_100_fdf5ce_1x400.png" />
+    <Content Include="resrc\libs\images\ui-bg_glass_65_ffffff_1x400.png" />
+    <Content Include="resrc\libs\images\ui-bg_gloss-wave_35_f6a828_500x100.png" />
+    <Content Include="resrc\libs\images\ui-bg_highlight-soft_100_eeeeee_1x100.png" />
+    <Content Include="resrc\libs\images\ui-bg_highlight-soft_75_ffe45c_1x100.png" />
+    <Content Include="resrc\libs\images\ui-icons_222222_256x240.png" />
+    <Content Include="resrc\libs\images\ui-icons_228ef1_256x240.png" />
+    <Content Include="resrc\libs\images\ui-icons_ef8c08_256x240.png" />
+    <Content Include="resrc\libs\images\ui-icons_ffd27a_256x240.png" />
+    <Content Include="resrc\libs\images\ui-icons_ffffff_256x240.png" />
+    <Content Include="resrc\libs\jquery-ui-bootstrap\css\custom-theme\images\ui-bg_flat_0_aaaaaa_40x100.png" />
+    <Content Include="resrc\libs\jquery-ui-bootstrap\css\custom-theme\images\ui-bg_glass_55_fbf9ee_1x400.png" />
+    <Content Include="resrc\libs\jquery-ui-bootstrap\css\custom-theme\images\ui-bg_glass_65_ffffff_1x400.png" />
+    <Content Include="resrc\libs\jquery-ui-bootstrap\css\custom-theme\images\ui-bg_glass_75_dadada_1x400.png" />
+    <Content Include="resrc\libs\jquery-ui-bootstrap\css\custom-theme\images\ui-bg_glass_75_e6e6e6_1x400.png" />
+    <Content Include="resrc\libs\jquery-ui-bootstrap\css\custom-theme\images\ui-bg_glass_75_ffffff_1x400.png" />
+    <Content Include="resrc\libs\jquery-ui-bootstrap\css\custom-theme\images\ui-bg_highlight-soft_75_cccccc_1x100.png" />
+    <Content Include="resrc\libs\jquery-ui-bootstrap\css\custom-theme\images\ui-bg_inset-soft_95_fef1ec_1x100.png" />
+    <Content Include="resrc\libs\jquery-ui-bootstrap\css\custom-theme\images\ui-icons_222222_256x240.png" />
+    <Content Include="resrc\libs\jquery-ui-bootstrap\css\custom-theme\images\ui-icons_2e83ff_256x240.png" />
+    <Content Include="resrc\libs\jquery-ui-bootstrap\css\custom-theme\images\ui-icons_454545_256x240.png" />
+    <Content Include="resrc\libs\jquery-ui-bootstrap\css\custom-theme\images\ui-icons_888888_256x240.png" />
+    <Content Include="resrc\libs\jquery-ui-bootstrap\css\custom-theme\images\ui-icons_cd0a0a_256x240.png" />
+    <Content Include="resrc\libs\jquery-ui-bootstrap\css\custom-theme\images\ui-icons_f6cf3b_256x240.png" />
+    <Content Include="resrc\libs\jquery-ui-bootstrap\css\custom-theme\jquery-ui-1.8.16.custom.css" />
+    <Content Include="resrc\libs\jquery-ui-bootstrap\css\custom-theme\jquery.ui.1.8.16.ie.css" />
+    <Content Include="resrc\libs\jquery-ui.js" />
+    <Content Include="resrc\libs\jquery.htmlClean.js" />
     <Content Include="resrc\libs\jquery.js" />
+    <Content Include="resrc\libs\rangy-core.js" />
+    <Content Include="resrc\ts\all.js">
+      <DependentUpon>all.js.bundle</DependentUpon>
+    </Content>
     <Content Include="web.config" />
   </ItemGroup>
   <ItemGroup>
@@ -127,6 +188,17 @@
     <Content Include="resrc\less\edit.css.map">
       <DependentUpon>edit.css</DependentUpon>
     </Content>
+    <Content Include="resrc\libs\fontawesome\font\fontawesome-webfont.eot" />
+    <Content Include="resrc\libs\fontawesome\font\fontawesome-webfont.svgz" />
+    <Content Include="resrc\libs\fontawesome\font\fontawesome-webfont.ttf" />
+    <Content Include="resrc\libs\fontawesome\font\fontawesome-webfont.woff" />
+    <Content Include="resrc\libs\fontawesome\README.md" />
+    <Content Include="resrc\ts\all.js.bundle" />
+    <Content Include="resrc\libs\BackendJS.js.bundle" />
+    <Content Include="resrc\less\backend.less" />
+    <Content Include="resrc\less\backend.css.map">
+      <DependentUpon>backend.css</DependentUpon>
+    </Content>
     <None Include="web.Debug.config">
       <DependentUpon>web.config</DependentUpon>
     </None>
@@ -139,6 +211,7 @@
     <TypeScriptCompile Include="resrc\ts\Backend.ts" />
     <TypeScriptCompile Include="resrc\ts\BackendAccess.ts" />
     <TypeScriptCompile Include="resrc\ts\ContentLoader.ts" />
+    <TypeScriptCompile Include="resrc\ts\d.ts\basic.d.ts" />
     <TypeScriptCompile Include="resrc\ts\d.ts\dropzone.d.ts" />
     <TypeScriptCompile Include="resrc\ts\d.ts\jquery.d.ts" />
     <TypeScriptCompile Include="resrc\ts\KBlog.ts" />
